# no5gongzuo

./: .env.example  .gitignore  AGENT交接规格书_激光D-D中子源_锂靶产氚流水线.md  CH_Li_neutron_BO_project_plan.md  HANDOFF.md  M4Pro_2D_Geant4_then_HPC3D_execution_manual.md  PROJECT_MASTER_HANDOFF.md  README.md  RESULTS_SUMMARY.md  config.yaml  project_execution.md  requirements.txt  一个月小论文执行框架_激光D-D中子源驱动锂靶产氚.md
configs/: baseline.json  stage0_benchmark_grid.json  stageD_initial_grid.json
data/: README.md  stopping_D_in_CD2.csv  stopping_D_in_CD2_placeholder_20260706.csv
docs/: AGENT_HANDOFF.md  COMPUTE_STRATEGY.md  EPOCH_PROBE_NOTES.md  FORMAL_RUN_PLAN.md  LITERATURE_EPOCH_MC_NOTES.md  OPENMC_LOCAL_RUN.md  PAPER_SCOPE_AND_GATES_20260706.md  PHYSICS_GATES_G1_G2_20260706.md  PHYSICS_LOCK.md  PIC2D_ANALYSIS_20260706.md  PIC_PARAMETER_JUSTIFICATION.md  PIC_SOURCE_CRITERIA.md  PROJECT_POSITIONING.md  STAGE2_DD_CHANNELS.md  STRATEGY_REVISION_20260703_expert.md
geant4/li7_benchmark/: CMakeLists.txt  README.md
geant4/li7_benchmark/scripts/: build_with_geant4_config.sh  collect_stage0.py  run_stage0_grid.py
geant4/li7_benchmark/src/: main.cc
hpc/: IMPORTANT_RUNS.md  README.md  REMOTE_LAYOUT.md  RUN_LOG.md  bootstrap_remote.sh  pic2d_formal_scan_20260706_jobs.csv  pic2d_scan16x40_20260706_jobs.csv  pic3d_microbench_20260703_jobs.csv  pic_first_2d_scan.csv  pic_scan4ps_first_20260702_jobs.csv  pic_scan_extensions_20260703_jobs.csv  ssh_config.example
interfaces/: __init__.py  schema.py
literature_notes/: literature_map.md
moduleA_pic/: __init__.py  convert_epoch_npz.py  (+2 more)
(+153 files in other folders)
